--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
             flex-direction: column;
             gap: var(--gap);
         }
+
+        #txt-promt-text, #txt-message {
+            font-size: x-large;
+            margin: auto;
+        }
     </style>
 </head>
 
